--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,6 @@ build_app:
     - APP_DIR=/home/defsin
   script:
     - cat ${KIK_RSA} > tmp
-    - ssh -i ./tmp defsin@192.241.150.224 ${APP_DIR}/down.sh
-    - scp -o "StrictHostKeyChecking no" -i ./tmp ./* defsin@192.241.150.224:${APP_DIR}/testkik
-    - ssh -i ./tmp defsin@192.241.150.224 ${APP_DIR}/up.sh
+    - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/down.sh
+    - scp -o "StrictHostKeyChecking no" -i ./tmp ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
+    - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/up.sh
