--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
-  - build
+  - deploy
 
-build_app:
+deploy:
   stage: build
   only:
     - master
@@ -10,6 +10,8 @@ build_app:
     - APP_DIR=/home/defsin
   script:
     - cat ${KIK_RSA} > tmp
+    - chmod 777 ./tmp
     - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/down.sh
     - scp -o "StrictHostKeyChecking no" -i ./tmp ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
     - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/up.sh
+    - rm ./tmp
