--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,6 @@ deploy_app:
     - cat ${KIK_RSA} > tmp
     - chmod 400 ./tmp
     - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/down.sh
-    - scp -o "StrictHostKeyChecking no" -i ./tmp ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
+    - scp -o "StrictHostKeyChecking no" -i ./tmp -r ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
     - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/up.sh
     - rm ./tmp
