Test env var key

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,6 @@ deploy_app:
     - echo APP_DIR=/var/www/FlaskApp/FlaskApp
     - APP_DIR=/home/defsin
   script:
-    - cat ${KIK_RSA} > tmp
-    - chmod 400 ./tmp
-    - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/down.sh
-    - scp -o "StrictHostKeyChecking no" -i ./tmp -r ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
-    - ssh -o "StrictHostKeyChecking no" -i ./tmp ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/up.sh
-    - rm ./tmp
+    - ssh -o "StrictHostKeyChecking no" -i ${KIK_RSA} ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/down.sh
+    - scp -o "StrictHostKeyChecking no" -i ${KIK_RSA} -r ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
+    - ssh -o "StrictHostKeyChecking no" -i ${KIK_RSA} ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/up.sh
