Set path to prod dir

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,9 @@ deploy_app:
   only:
     - master
   before_script:
-    - echo APP_DIR=/var/www/FlaskApp/FlaskApp
-    - APP_DIR=/home/defsin
+    - APP_DIR=/var/www/FlaskApp/FlaskApp
   script:
     - chmod 400 ${KIK_RSA}
     - ssh -o "StrictHostKeyChecking no" -i ${KIK_RSA} ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/down.sh
-    - scp -o "StrictHostKeyChecking no" -i ${KIK_RSA} -r ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}/testkik
+    - scp -o "StrictHostKeyChecking no" -i ${KIK_RSA} -r ./* ${SERVER_USER}@${SERVER_IP}:${APP_DIR}
     - ssh -o "StrictHostKeyChecking no" -i ${KIK_RSA} ${SERVER_USER}@${SERVER_IP} ${APP_DIR}/up.sh
