Add Art under Culture category

--- a/kik_library.yml
+++ b/kik_library.yml
@@ -1093,7 +1093,6 @@ geography:
         - Exgender
         - Existigender
         - Female
-        - Female
         - Femfluid
         - Femgender
         - Fluidflux
@@ -2558,8 +2557,8 @@ science:
         - Zygote
         - Chloroplast
     'Famous Mathematical Theorems':
-        - "\t Principle of Inclusion/Exclusion"
-        - "\t The Intermediate Value Theorem"
+        - "Principle of Inclusion/Exclusion"
+        - "The Intermediate Value Theorem"
         - 'Bezout''s Theorem'
         - 'Cramer''s Rule'
         - 'Divergence of the Harmonic Series'
@@ -3468,6 +3467,107 @@ sports:
         - 'New Orleans Pelicans'
         - 'San Antonio Spurs'   
 culture:
+    Art:
+        - 'painting_Mona Lisa'
+        - 'painting_The Starry Night'
+        - 'painting_The Scream'
+        - 'painting_The Night Watch'
+        - 'painting_The Kiss'
+        - 'painting_The Arnolfini Portrait'
+        - 'painting_The Girl With A Pearl Earring'
+        - 'painting_Impression Sunrise'
+        - 'painting_Las Meninas'
+        - 'painting_The Creation Of Adam'
+        - 'painting_Luncheon Of The Boating Party'
+        - 'painting_The Grand Odalisque'
+        - 'painting_The Swing'
+        - 'painting_The Liberty Leading The People'
+        - 'painting_The Birth Of Venus'
+        - 'painting_Napoleon Crossing The Alps'
+        - 'painting_Musicians'
+        - 'painting_American Gothic'
+        - 'painting_Sunday Afternoon On The Island Of La Grande Jatte'
+        - 'painting_The Sleeping Gypsy'
+        - 'painting_The Triumph Of Galatea'
+        - 'painting_The Gleaners'
+        - 'painting_Primavera'
+        - 'painting_The Third Of May 1808'
+        - 'painting_Charles I In Three Positions'
+        - 'painting_The Wanderer Above The Sea Of Fog'
+        - 'painting_Olympia'
+        - 'painting_The Tower Of Babel'
+        - 'painting_View Of Toledo'
+        - 'painting_A Cotton Office In New Orleans'
+        - 'painting_Bacchus And Ariadne'
+        - 'painting_The Sleepers'
+        - 'painting_The Gross Clinic'
+        - 'painting_The Ninth Wave'
+        - 'painting_The Last Supper'
+        - 'painting_St. George And The Dragon'
+        - 'painting_Mr And Mrs Robert Andrews'
+        - 'painting_Pollice Verso'
+        - 'painting_Pilgrimage To Cythera'
+        - 'painting_Large Bathers'
+        - 'painting_The Astronomer'
+        - 'painting_Wave'
+        - 'painting_The Fall Of The Damned'
+        - 'painting_A Bar At The Folies Bergere'
+        - 'painting_The Storm On The Sea Of Galilee'
+        - 'painting_The Laughing Cavalier'
+        - 'painting_Paris Street In Rainy Weather'
+        - 'painting_Foxes'
+        - 'painting_The Lady With The Ermine'
+        - 'painting_Watson And The Shark'
+        - 'painting_The Ladies Waldegrave'
+        - 'painting_Whistler''s Mother'
+        - 'painting_Dance At The Moulin De La Galette'
+        - 'painting_Breezing Up'
+        - 'painting_The Great Wave Off Kanagawa'
+        - 'painting_Large Seated Nude'
+        - 'painting_Stag Night At Sharkeys'
+        - 'painting_The Night Cafe'
+        - 'painting_The Avenue In The Rain'
+        - 'painting_Annunciation'
+        - 'painting_The Ambassadors'
+        - 'painting_Flaming June'
+        - 'painting_Susanna And The Elders'
+        - 'painting_Composition VIII'
+        - 'painting_The Oath Of Horatii'
+        - 'painting_A Friend In Need'
+        - 'painting_Dante And Virgil In Hell'
+        - 'painting_Saturn Devouring His Son'
+        - 'painting_Battle Of Issus'
+        - 'painting_The Potato Eaters'
+        - 'painting_The Birth Of Venus'
+        - 'painting_Mars And Venus Allegory Of Peace'
+        - 'painting_Red Balloon'
+        - 'painting_The Lady Of Shalott'
+        - 'painting_Portrait Of A Gentleman Skating'
+        - 'painting_The Hay Wain'
+        - 'painting_The Boat Trip'
+        - 'painting_Sleeping Venus'
+        - 'painting_Adoration Of The Magi'
+        - 'painting_Portrait Of A Young Man'
+        - 'painting_Boulevard Montmartre Spring'
+        - 'painting_The Wedding At Cana'
+        - 'painting_The Anatomy Lesson Of Dr. Nicolaes Tulp'
+        - 'painting_The Raft Of The Medusa'
+        - 'painting_The Kiss'
+        - 'painting_The Bath'
+        - 'painting_Fort Vimieux'
+        - 'painting_The Japanese Bridge'
+        - 'painting_Washington Crossing The Delaware'
+        - 'painting_The Garden Of Earthly Delights'
+        - 'painting_Supper At Emmaus'
+        - 'painting_Feast Of The Rosary'
+        - 'painting_The Hireling Shepherd'
+        - 'painting_Hunters In The Snow'
+        - 'painting_The Seed Of Areoi'
+        - 'painting_Barge Haulers On The Volga'
+        - 'painting_Odalisque'
+        - 'painting_Cardsharps'
+        - 'painting_The Pont Du Gard'
+        - 'painting_The Luncheon On The Grass'
     Festivals:
         - 'Albuquerque International Balloon Fiesta'
         - 'Amsterdam Gay Pride'
