Add ufc fighters

--- a/kik_library.yml
+++ b/kik_library.yml
@@ -2902,20 +2902,56 @@ sports:
         - Weightlifting
         - Wrestling
     'UFC Fighters':
-        - 'Amanda Nunes'
-        - 'Conor McGregor'
-        - 'Cris Cyborg'
-        - 'Daniel Cormier'
-        - 'Demetrius Johnson'
-        - 'Georges St-Pierre'
-        - 'Khabib Nurmagomedov'
-        - 'Max Holloway'
-        - 'Robert Whittaker'
-        - 'Stipe Miocic'
-        - 'TJ Dillashaw '
-        - 'Tony Ferguson'
-        - 'Tyron Woodley'
-        - 'Cody Garbrandt'
+        - 'ufc_Nick Diaz'
+        - 'ufc_Jake Shields'
+        - 'ufc_Frankie Edgar'
+        - 'ufc_Norifumi Yamamoto'
+        - 'ufc_Tito Ortiz'
+        - 'ufc_Evan Tanner'
+        - 'ufc_Mark Coleman'
+        - 'ufc_Lyoto Machida'
+        - 'ufc_Gilbert Melendez'
+        - 'ufc_Rashad Evans'
+        - 'ufc_Vitor Belfort'
+        - 'ufc_Frank Mir'
+        - 'ufc_Tim Sylvia'
+        - 'ufc_Shinya Aoki'
+        - 'ufc_Don Frye'
+        - 'ufc_Miguel Torres'
+        - 'ufc_Hayato Sakurai'
+        - 'ufc_Carlos Condit'
+        - 'ufc_Ken Shamrock'
+        - 'ufc_Junior Dos Santos'
+        - 'ufc_Pat Miletich'
+        - 'ufc_Jeremy Horn'
+        - 'ufc_Dominick Cruz'
+        - 'ufc_Kazushi Sakuraba'
+        - 'ufc_Sean Sherk'
+        - 'ufc_Randy Couture'
+        - 'ufc_Takanori Gomi'
+        - 'ufc_Igor Vovchancyn'
+        - 'ufc_Quinton Jackson'
+        - 'ufc_Urijah Faber'
+        - 'ufc_Josh Barnett'
+        - 'ufc_Royce Gracie'
+        - 'ufc_B.J. Penn'
+        - 'ufc_Rich Franklin'
+        - 'ufc_Mirko Filopovic'
+        - 'ufc_Frank Shamrock'
+        - 'ufc_Jose Aldo'
+        - 'ufc_Mauricio Rua'
+        - 'ufc_Dan Henderson'
+        - 'ufc_Masakatsu Funaki'
+        - 'ufc_Dan Severn'
+        - 'ufc_Chuck Liddell'
+        - 'ufc_Jon Jones'
+        - 'ufc_Bas Rutten'
+        - 'ufc_Wanderlei Silva'
+        - 'ufc_Antonio Rodrigo Nogueira'
+        - 'ufc_Georges St-Pierre'
+        - 'ufc_Matt Hughes'
+        - 'ufc_Fedor Emelianenko'
+        - 'ufc_Anderson Silva'
     'NFL Players':
         - 'A.J. Green'
         - 'Aaron Donald'
